Set fixed width on the "create" buttons instead of 100%
The 100% didn't seem to account for padding on the containing
<form> and thus the buttons were off-center.

Also, the natural height of the buttons for me is 132px so change
the hardcoded height to 135px.

--- a/ui/app/assets/stylesheets/home.less
+++ b/ui/app/assets/stylesheets/home.less
@@ -238,7 +238,7 @@ form {
 #newAppForm {
 	ul {
 		top: 200px;
-		bottom: 130px;
+		bottom: 135px;
 	}
 }
 
@@ -264,13 +264,13 @@ form {
             width: 100%;
             height: auto;
             top: 65px;
-            bottom: 130px;
+            bottom: 135px;
         }
     }
     .select {
         position: absolute;
-        width: 100%;
-        bottom: 0;
+        width: 310px;
+        bottom: 0px;
     }
 }
 
